# Django_Project1

./: .env.docker  Dockerfile  db.sqlite3  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
app/: admin.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_auto_20241205_0632.py  0003_article_creator_alter_article_word_count.py  0004_alter_article_content_alter_article_created_at_and_more.py  0004_alter_article_options_alter_userprofile_managers_and_more.py  0005_alter_article_options.py
djangoproject/: settings.py  urls.py
locale/es/LC_MESSAGES/: django.mo  django.po
locale/ja/LC_MESSAGES/: django.mo  django.po
static/: input.css  output.css
templates/app/: article_create.html  article_delete.html  article_update.html  base.html  home.html
templates/registration/: login.html
